# ferrite-rs

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  BEVY_MIGRATION.md  Cargo.toml  README.md  SUMMARY.md  package.json  test_client.sh  whitelist.txt
${game_directory}/crash-reports/: crash-2026-05-24_18.33.27-client.txt
cli/: Cargo.toml
cli/src/: main.rs
client/: Cargo.toml
client/src/: game.rs  main.rs  net_plugin.rs  network.rs  player.rs  render.rs  shader.wgsl  state.rs  ui.rs
client/src/network/: connection.rs  mod.rs
configs/: config.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  status.rs
crates/client/: Cargo.toml
crates/client/src/: chunk_mesh.rs  demo_world.rs  main.rs  net_plugin.rs  player.rs  server.rs  ui.rs  worlds.rs
crates/client/src/render/: atlas.rs  block_models.rs  mod.rs
crates/client/src/render/block/: block_and_tint_getter.rs  block_model_set.rs  block_state_model_set.rs  mod.rs  model_block_renderer.rs
crates/client/src/render/block/dispatch/: block_state_model.rs  block_state_model_part.rs  mod.rs  single_variant.rs
crates/client/src/render/block/model/: block_model.rs  mod.rs
crates/client/src/render/chunk/: chunk_render_dispatcher.rs  mod.rs  render_section_region.rs  section_compiler.rs
crates/client/src/render/geometry/: baked_quad.rs  mod.rs  quad_collection.rs
crates/client/src/render/texture/: abstract_texture.rs  mod.rs  texture_atlas_sprite.rs
crates/client/src/resources/model/: simple_model_wrapper.rs
crates/client/src/resources/model/geometry/: baked_quad.rs
crates/client/src/ui/: hud.rs  menu.rs  pause.rs
crates/client_multiplayer/: Cargo.toml
crates/client_multiplayer/src/: level.rs
crates/client_player/: Cargo.toml
crates/client_player/src/: player.rs
crates/client_render/: Cargo.toml
crates/client_render/src/: lib.rs
crates/client_render/src/block/: block_model_set.rs  block_state_model_set.rs  mod.rs
crates/client_render/src/block/dispatch/: block_state_model.rs  block_state_model_part.rs  cube_block_model.rs  mod.rs
crates/client_render/src/chunk/: chunk_render_dispatcher.rs  section_compiler.rs
crates/client_render/src/texture/: texture_atlas.rs
crates/client_resources/: Cargo.toml
crates/client_resources/src/model/: mod.rs
crates/client_resources/src/model/geometry/: baked_quad.rs  mod.rs  quad_collection.rs
crates/client_resources/src/model/sprite/: material.rs
crates/core/: Cargo.toml
crates/core/src/: block.rs  block_pos.rs  direction.rs  lib.rs  position.rs  section_pos.rs  uuid_util.rs  vec3i.rs
crates/core/src/protocol/packets/: login.rs  status.rs
crates/ferrite-core/: Cargo.toml
crates/ferrite-core/src/: block.rs  chunk.rs  lib.rs  nbt.rs
crates/ferrite-core/src/protocol/packets/: handshake.rs  mod.rs
crates/ferrite-gui/: Cargo.toml
crates/ferrite-gui/src/: lan_discovery.rs  lib.rs  player.rs  worlds.rs
crates/ferrite-gui/src/ui/: debug_overlay.rs  menu.rs  mod.rs  pause.rs  server_list.rs
crates/ferrite-net/: Cargo.toml
crates/ferrite-net/src/: lib.rs
crates/ferrite-net/src/network/: connection.rs  mod.rs
crates/gui/: Cargo.toml
crates/gui/src/: lan_discovery.rs  lib.rs  player.rs
crates/gui/src/ui/: debug_overlay.rs  hud.rs  server_list.rs
crates/mc-launcher-cli/: Cargo.toml
crates/mc-launcher-cli/src/: assets.rs  download.rs  launch.rs  library.rs  main.rs  manifest.rs
crates/mc-src-cli/: Cargo.toml
crates/mc-src-cli/src/: main.rs
crates/network/: Cargo.toml
crates/network/src/: lan.rs  lib.rs
crates/network/src/chat/: formatted_text.rs  mod.rs  style.rs
crates/network/src/codec/: bytebuf_codecs.rs  mod.rs  stream_codec.rs
crates/network/src/network/: connection.rs  mod.rs
crates/resources/: Cargo.toml
crates/resources/src/: identifier.rs
crates/serialization/: Cargo.toml
crates/serialization/src/: codec.rs
crates/server/: Cargo.toml
crates/server-cli/: Cargo.toml
crates/server-cli/src/: main.rs  scan_lan.rs  serve.rs  status.rs
crates/server/src/packs/: abstract_pack_resources.rs  composite_pack_resources.rs  file_pack_resources.rs  mod.rs  pack_location_info.rs  pack_resources.rs  pack_type.rs  path_pack_resources.rs  vanilla_pack_resources.rs
crates/server/src/packs/metadata/: metadata_section_type.rs  mod.rs
crates/server/src/packs/repository/: known_pack.rs  mod.rs  pack_source.rs
crates/server/src/packs/resources/: closeable_resource_manager.rs  fallback_resource_manager.rs  io_supplier.rs  mod.rs  multi_pack_resource_manager.rs  preparable_reload_listener.rs  reload_instance.rs  reloadable_resource_manager.rs  resource.rs  resource_manager.rs  resource_manager_reload_listener.rs  resource_metadata.rs  resource_provider.rs  simple_reload_instance.rs
crates/world/: Cargo.toml
crates/world/src/: lib.rs
crates/world/src/entity/: entity.rs  mod.rs
crates/world/src/level/: chunk_pos.rs  mod.rs  section_pos.rs
crates/world/src/level/block/state/: block_behaviour.rs  block_state.rs
crates/world/src/level/block/state/properties/: property.rs
crates/world/src/phys/shapes/: mod.rs
crates/world_level/: Cargo.toml
crates/world_level/src/: lib.rs
crates/world_level/src/block/state/: block_state.rs  mod.rs  state_holder.rs
crates/world_level/src/block/state/properties/: mod.rs
docs/: f3.md  rust.md  tmp.md
lib/ferrite-core/: Cargo.toml
lib/ferrite-core/src/: chunk.rs  gameplay.rs  item.rs  lib.rs  registry.rs  world.rs
lib/ferrite-core/src/protocol/: codec.rs  packets.rs
lib/ferrite-core/src/protocol/packets/: config.rs  login.rs  mod.rs  play.rs
lib/ferrite-net/: Cargo.toml
lib/ferrite-net/src/network/: mod.rs
logs/: ferrumc.2026-05-23.log.txt  ferrumc.2026-05-24.log.txt
tools/mc-src/: config.json  fetch.py
world/: data.mdb  lock.mdb
