[workspace]
resolver = "2"
members = [
    "crates/ferrite-core",
    "crates/ferrite-net",
    "crates/world",
    "crates/client_player",
    "crates/client_multiplayer",
    "crates/client",
    "crates/server-cli",
    # Tooling
    "crates/mc-launcher-cli",
    "crates/mc-src-cli",
]
default-members = ["crates/client"]

[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
