[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/gui",
    "crates/network",
    "crates/world",
    "crates/client_player",
    "crates/client_multiplayer",
    "crates/client",
    # Tooling
    "crates/server-cli",
    "crates/server",
    "crates/mc-launcher-cli",
    "crates/mc-src-cli",
]
default-members = ["crates/client"]

[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]
ferrite_core = { path = "crates/core" }
network = { path = "crates/network" }
gui = { path = "crates/gui" }
world = { path = "crates/world" }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "gzip",
] }
bevy = { version = "0.14", default-features = false, features = [
    "bevy_winit",
    "bevy_ui",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_asset",
    "default_font",
    "x11",
] }
bevy_ecs = { version = "0.14", default-features = false }
tokio = { version = "1", default-features = false }
serde = { version = "1", default-features = false }
clap = { version = "4", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false }
uuid = { version = "1", default-features = false }
anyhow = "1"
bytes = "1"
chrono = "0.4"
rand = "0.8"
tracing = "0.1"
socket2 = "0.5"
image = "0.25"
zip = "2"
bevy_diagnostic = "0.14"
serde_json = "1"
flate2 = "1"
aes = "0.9"
cfb8 = "0.9"
rsa = "0.9"
glam = "0.29"
md-5 = "0.10"
