[package]
name = "ferrite-client"
version = "0.1.0"
edition = "2021"

[dependencies]
ferrite-core = { path = "../lib/ferrite-core" }
bevy_ecs = { version = "0.14", default-features = false, features = ["multi_threaded"] }
wgpu = "22"
winit = "0.30"
egui = "0.28"
egui-wgpu = "0.28"
egui-winit = "0.28"
tokio = { version = "1", features = ["full"] }
bytes = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
glam = "0.29"
kira = "0.9"
env_logger = "0.11"
pollster = "0.4"
