[package]
name = "ferrite-client"
version = "0.1.0"
edition = "2021"

[dependencies]
ferrite-core = { path = "../lib/ferrite-core" }
bevy_ecs = { version = "0.14", default-features = false, features = ["multi_threaded"] }
clap = { version = "4", features = ["derive"] }
wgpu = "0.20"
winit = "0.29"
egui = "0.28"
egui-wgpu = "0.28"
egui-winit = "0.28"
tokio = { version = "1", features = ["full"] }
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
glam = "0.29"
uuid = { version = "1", features = ["v4"] }
flate2 = "1"
rsa = "0.9"
aes = "0.9"
cfb8 = "0.9"
rand = "0.8"
kira = "0.9"
env_logger = "0.11"
pollster = "0.4"
cfb8 = "0.9.1"
