[package]
name = "ferrite-client"
version = "0.1.0"
edition = "2021"

[dependencies]
ferrite-core = { path = "../lib/ferrite-core" }
bevy = { version = "0.14", default-features = false, features = ["bevy_winit", "bevy_ui", "bevy_render", "bevy_core_pipeline", "bevy_pbr", "bevy_asset", "default_font", "x11"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
glam = "0.29"
uuid = { version = "1", features = ["v4"] }
flate2 = "1"
rsa = "0.9"
aes = "0.9"
cfb8 = "0.9"
rand = "0.8"
kira = "0.9"
env_logger = "0.11"
