[package]
name = "ferrite-client"
version = "0.1.0"
edition = "2021"

[dependencies]
ferrite-core = { path = "../ferrite-core" }
ferrite-net = { path = "../ferrite-net" }
ferrite-gui = { path = "../ferrite-gui" }
ferrite-world = { path = "../world" }
client_render.workspace = true
bevy.workspace = true
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
rand = "0.8"
chrono = "0.4"
bevy_diagnostic = "0.14"
image = "0.25"
zip = "2"
