[package]
name = "client"
version = "0.1.0"
edition.workspace = true

[dependencies]
ferrite_core.workspace = true
network.workspace = true
gui.workspace = true
world.workspace = true
bevy.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow.workspace = true
rand.workspace = true
chrono.workspace = true
bevy_diagnostic.workspace = true
image.workspace = true
zip.workspace = true
