[package]
name = "ferrite-client-player"
version = "0.1.0"
edition = "2021"

[dependencies]
ferrite-core = { path = "../ferrite-core" }
ferrite-world = { path = "../world" }
ferrite-gui = { path = "../ferrite-gui" }
bevy = { version = "0.14", default-features = false, features = [
    "bevy_winit",
    "bevy_ui",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_asset",
    "default_font",
    "x11",
] }
glam = "0.29"
tracing = "0.1"
