[package]
name = "ferrite-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
ferrite-core = { path = "../ferrite-core" }
ferrite-net = { path = "../ferrite-net" }
bevy = { version = "0.14", default-features = false, features = [
    "bevy_winit",
    "bevy_ui",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_asset",
    "default_font",
    "x11",
] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
anyhow = "1"
rand = "0.8"
chrono = "0.4"
