[package]
name = "gui"
version = "0.1.0"
edition.workspace = true

[dependencies]
ferrite_core.workspace = true
network.workspace = true
world.workspace = true
bevy.workspace = true
bevy_diagnostic.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
anyhow.workspace = true
rand.workspace = true
chrono.workspace = true
