[package]
name = "mc-launcher-cli"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { workspace = true, features = ["stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-appender = "0.2"
sha1 = "0.10"
hex = "0.4"
zip = "2"
futures-util = "0.3"
dirs = "6"
shlex = "1"
