[package]
name = "mc-launcher-cli"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
reqwest = { workspace = true, features = ["stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "registry"] }
tracing-appender = "0.2"
sha1 = "0.10"
hex = "0.4"
zip.workspace = true
futures-util = "0.3"
dirs = "6"
shlex = "1"
