[package]
name = "mc-src-cli"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
