[package]
name = "mc-src-cli"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
zip.workspace = true
