[package]
name = "network"
version = "0.1.0"
edition.workspace = true

[dependencies]
core.workspace = true
anyhow.workspace = true
bytes.workspace = true
tokio = { workspace = true, features = ["full"] }
aes.workspace = true
cfb8.workspace = true
flate2.workspace = true
rsa.workspace = true
rand.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }
socket2.workspace = true
