[package]
name = "server-cli"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
ferrite-core = { path = "../ferrite-core" }
ferrite-net = { path = "../ferrite-net" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1"
bytes = "1"
socket2 = "0.5"
