[package]
name = "server-cli"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
core.workspace = true
network.workspace = true
clap = { workspace = true, features = ["derive"] }
anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde_json.workspace = true
bytes.workspace = true
socket2.workspace = true
